# Kris_Maya

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
cmake/: FindMaya.cmake
modules/: CMakeLists.txt
modules/Kris_Maya/: CMakeLists.txt
modules/Kris_Maya/include/Kris/Kris_Maya/: Multithread_Seperate.h
modules/Kris_Maya/src/: Multithread_Seperate.cpp  PluginMain.cpp
